<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark">Темная тема</string>
    <string name="mail">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="docs">Пользовательское соглашение</string>

</resources>