<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:pointerIcon="alias"
        android:foreground="?attr/selectableItemBackground"


        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/Text"
        android:textSize="22sp"


        app:cornerRadius="16dp"
        app:icon="@drawable/light_mode1"
        app:iconGravity="textStart"
        app:iconPadding="1dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:pointerIcon="alias"
        android:foreground="?attr/selectableItemBackground"


        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/Text"
        android:textSize="22sp"


        app:cornerRadius="16dp"
        app:icon="@drawable/light_mode2"
        app:iconGravity="textStart"
        app:iconPadding="1dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:pointerIcon="alias"


        android:text="@string/setting"
        android:textAllCaps="false"
        android:textColor="@color/Text"
        android:textSize="22sp"


        app:cornerRadius="16dp"
        app:icon="@drawable/light_mode3"
        app:iconGravity="textStart"
        app:iconPadding="1dp"
        app:iconTint="@color/black" />

</LinearLayout>


