<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
            android:src="@drawable/vector"
            android:background="@color/white"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textSize="22sp"
            android:gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"/>








    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center_vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="44dp"
                android:layout_gravity="center_vertical" />


            <ImageButton

                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="6dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/control" />


        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_gravity="center_vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="44dp"
                    android:layout_gravity="center_vertical" />


                <ImageButton

                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="6dp"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/mail" />


            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_gravity="center_vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="44dp"
                        android:layout_gravity="center_vertical" />


                    <ImageButton

                        android:layout_width="56dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="6dp"
                        android:layout_marginVertical="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/support" />


                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:layout_gravity="center_vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/docs"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="44dp"
                            android:layout_gravity="center_vertical" />


                        <ImageButton

                            android:layout_width="56dp"
                            android:layout_height="40dp"
                            android:layout_gravity="end"
                            android:layout_marginEnd="6dp"
                            android:layout_marginVertical="10dp"
                            android:backgroundTint="@android:color/transparent"
                            android:src="@drawable/arrow" />


                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
